tests/parser/parse-declare.6.bad.error
error: Duplicate monomorphize attribute
  --> test:5:0
   |
 4 |  (monomorphize)
   |  -------------- previous attribute here
 5 |  (monomorphize)
   |  ^^^^^^^^^^^^^^ monomorphize attribute here
 6 |  (declare f T)
   |  ------------- when parsing declare
